--- a/03《微博@Liberalisman面试知识点总结》/面试题.md
+++ b/03《微博@Liberalisman面试知识点总结》/面试题.md
@@ -40,6 +40,7 @@
 - 39.[如何做iOS逆向](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#39如何做ios逆向)
 - 40.[请列举Unix信号](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#40请列举unix信号)
 - 41.[请列举Swift常用的关键字和用法（比如final、lazy等）](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#41请列举swift常用的关键字和用法比如finallazy等)
+- 42.iOS 开源库总结
 
 
 # 面试题
@@ -319,6 +320,11 @@ class Solution {
 }
 
 ```
+
+### 6.最长不含重复字符的子字符串
+
+### 7.三数之和
+
 
 ### 6.属性redawrite，readonly，assign，retain，copy，nonatomic各有什么作用，在哪种情况下用？H
 - readwrite：可读可写特性,需要生成setter和getter方法时使用, 可被外界读取和修改；
@@ -1536,3 +1542,130 @@ _c('method')的方式； 在_c函数中通过JSContex建立的桥接函数传入
     * case：switch的选择分支.
 - lazy：我们在变量属性前加lazy关键字来指定延迟加载。
 - inout:inout作为函数声明时,引用传值的关键字。但是在调用的时候引用的是地址,所以在引用的时候要加上&
+
+## 42.iOS 开源库总结
+### AFNetworking 底层原理分析
+- AFNetworking主要是对NSURLSession和NSURLConnection(iOS9.0废弃)的封装,其中主要有以下类:
+    * AFHTTPRequestOperationManager：内部封装的是 NSURLConnection, 负责发送网络请求, 使用最多的一个类。(3.0废弃)
+    * AFHTTPSessionManager：内部封装是 NSURLSession, 负责发送网络请求,使用最多的一个类。
+    * AFNetworkReachabilityManager：实时监测网络状态的工具类。当前的网络环境发生改变之后,这个工具类就可以检测到。
+    * AFSecurityPolicy：网络安全的工具类, 主要是针对 HTTPS 服务。
+    * AFURLRequestSerialization：序列化工具类,基类。上传的数据转换成JSON格式
+  (AFJSONRequestSerializer).使用不多。
+    * AFURLResponseSerialization：反序列化工具类;基类.使用比较多:
+    * AFJSONResponseSerializer; JSON解析器,默认的解析器.
+    * AFHTTPResponseSerializer; 万能解析器; JSON和XML之外的数据类型,直接返回二进制数据.对服务器返回的数据不做任何处理.
+    * AFXMLParserResponseSerializer; XML解析器;
+
+### ASIHttpRequest、AFNetWorking之间的区别
+- ASIHttpRequest功能强大，主要是在MRC下实现的，是对系统CFNetwork API进行了封装，支持HTTP协议的CFHTTP，配置比较复杂，并且ASIHttpRequest框架默认不会帮你监听网络改变，如果需要让ASIHttpRequest帮你监听网络状态改变，并且手动开始这个功能。
+- AFNetWorking构建于NSURLConnection、NSOperation以及其他熟悉的Foundation技术之上。拥有良好的架构，丰富的API及模块构建方式，使用起来非常轻松。它基于NSOperation封装的，AFURLConnectionOperation子类。
+- ASIHttpRequest是直接操作对象ASIHttpRequest是一个实现了NSCoding协议的NSOperation子类；AFNetWorking直接操作对象的AFHttpClient，是一个实现NSCoding和NSCopying协议的NSObject子类。
+- 同步请求：ASIHttpRequest直接通过调用一个startSynchronous方法；AFNetWorking默认没有封装同步请求，如果开发者需要使用同步请求，则需要重写getPath:paraments:success:failures方法，对于AFHttpRequestOperation进行同步处理。
+- 性能对比：AFNetworking请求优于ASIHttpRequest；
+
+### SDWebImage原理
+- 一个为UIImageView提供一个分类来支持远程服务器图片加载的库。
+- 功能简介：
+    * 一个添加了web图片加载和缓存管理的UIImageView分类
+    * 一个异步图片下载器
+    * 一个异步的内存加磁盘综合存储图片并且自动处理过期图片
+    * 支持动态gif图
+    * 支持webP格式的图片
+    * 后台图片解压处理
+    * 确保同样的图片url不会下载多次
+    * 确保伪造的图片url不会重复尝试下载
+    * 确保主线程不会阻塞
+- 工作流程
+    * 入口 setImageWithURL:placeholderImage:options: 会先把 placeholderImage 显示，然后 SDWebImageManager 根据 URL 开始处理图片。
+    * 进入 SDWebImageManager-downloadWithURL:delegate:options:userInfo:，交给 SDImageCache 从缓存查找图片是否已经下载 queryDiskCacheForKey:delegate:userInfo:.
+    * 先从内存图片缓存查找是否有图片，如果内存中已经有图片缓存，SDImageCacheDelegate 回调 imageCache:didFindImage:forKey:userInfo: 到 SDWebImageManager。
+    * SDWebImageManagerDelegate 回调 webImageManager:didFinishWithImage: 到 UIImageView+WebCache 等前端展示图片。
+    * 如果内存缓存中没有，生成 NSInvocationOperation 添加到队列开始从硬盘查找图片是否已经缓存。
+    * 根据 URLKey 在硬盘缓存目录下尝试读取图片文件。这一步是在 NSOperation 进行的操作，所以回主线程进行结果回调 notifyDelegate:。
+    * 如果上一操作从硬盘读取到了图片，将图片添加到内存缓存中（如果空闲内存过小，会先清空内存缓存）。SDImageCacheDelegate 回调 imageCache:didFindImage:forKey:userInfo:。进而回调展示图片。
+    * 如果从硬盘缓存目录读取不到图片，说明所有缓存都不存在该图片，需要下载图片，回调 imageCache:didNotFindImageForKey:userInfo:。
+    * 共享或重新生成一个下载器 SDWebImageDownloader 开始下载图片。
+    * 图片下载由 NSURLConnection 来做，实现相关 delegate 来判断图片下载中、下载完成和下载失败。
+    * connection:didReceiveData: 中利用 ImageIO 做了按图片下载进度加载效果。connectionDidFinishLoading: 数据下载完成后交给 SDWebImageDecoder 做图片解码处理。
+    * 图片解码处理在一个 NSOperationQueue 完成，不会拖慢主线程 UI。如果有需要对下载的图片进行二次处理，最好也在这里完成，效率会好很多。
+    * 在主线程 notifyDelegateOnMainThreadWithInfo: 宣告解码完成，imageDecoder:didFinishDecodingImage:userInfo: 回调给 SDWebImageDownloader。imageDownloader:didFinishWithImage: 回调给 SDWebImageManager 告知图片下载完成。
+    * 通知所有的 downloadDelegates 下载完成，回调给需要的地方展示图片。将图片保存到 SDImageCache 中，内存缓存和硬盘缓存同时保存。写文件到硬盘也在以单独 NSInvocationOperation 完成，避免拖慢主线程。
+    * SDImageCache 在初始化的时候会注册一些消息通知，在内存警告或退到后台的时候清理内存图片缓存，应用结束的时候清理过期图片。
+    * SDWI 也提供了 UIButton+WebCache 和 MKAnnotationView+WebCache，方便使用。
+    * SDWebImagePrefetcher 可以预先下载图片，方便后续使用。
+- 图片下载
+    * SDWebImageDownloader
+    * 单例，图片下载器，负责图片异步下载，并对图片加载做了优化处理
+    * 图片的下载操作放在一个NSOperationQueue并发操作队列中，队列默认最大并发数是6
+    * 每个图片对应一些回调（下载进度，完成回调等），回调信息会存在downloader的URLCallbacks（一个字典，key是url地址，value是图片下载回调数组）中，URLCallbacks可能被多个线程访问，所以downloader把下载任务放在一个barrierQueue中，并设置屏障保证同一时间只有一个线程访问URLCallbacks。，在创建回调URLCallbacks的block中创建了一个NSOperation并添加到NSOperationQueue中。
+    * 每个图片下载都是一个operation类，创建后添加到一个队列中，SDWebimage定义了一个协议 SDWebImageOperation作为图片下载操作的基础协议，声明了一个cancel方法，用于取消操作。
+    * 对于图片的下载，SDWebImageDownloaderOperation完全依赖于NSURLConnection类，继承和实现了NSURLConnectionDataDelegate协议的方法
+
+- [推荐文章](https://www.jianshu.com/p/13c0cdc7987e)
+
+### 简单的描述一下 SDWebImage的缓存策略？
+- 首先，SDWebImage 的图片缓存采用的是 Memory(内存) 和 Disk(硬盘) 双重 Cache 机制，SDImageCache 中有一个叫做 memCache 的属性，它是一个NSCache对象，用于实现我们对图片的 Memory Cache，其实就是接受系统的内存警告通知，然后清除掉自身的图片缓存。Disk Cache，也就是文件缓存，SDWebImage 会将图片存放到 NSCachesDirectory目录中，然后为每一个缓存文件生成一个 md5 文件名, 存放到文件中。
+- 整体机制如下：
+    * Memory(内存)中查找：SDImageCache 类的 queryDiskCacheForKey方法，查询图片缓存，queryDiskCacheForKey 方法内部， 先会查询 Memory Cache ，如果查找到就直接返回，反之进入下面的硬盘查找。
+    * Disk(硬盘) 中查找：如果 Memory Cache 查找不到， 就会查询 Disk Cache，查询 Disk Cache 的时候有一个小插曲，就是如果 Disk Cache 查询成功，还会把得到的图片再次设置到 Memory Cache 中。 这样做可以最大化那些高频率展现图片的效率。如果找不到就进入下面的网络下载。
+    * 网路下载：请求网络使用的是 imageDownloader属性，这个示例专门负责下载图片数据。 如果下载失败， 会把失败的图片地址写入 failedURLs 集合，为什么要有这个 failedURLs 呢， 因为 SDWebImage默认会有一个对上次加载失败的图片拒绝再次加载的机制。 也就是说，一张图片在本次会话加载失败了，如果再次加载就会直接拒绝，SDWebImage 这样做可能是为了提高性能。如果下载图片成功了，接下来就会使用 [self.imageCache storeImage]方法将它写入缓存 ，同时也会写入硬盘，并且调用completedBlock告诉前端显示图片。
+    * Disk(硬盘)缓存清理策略：SDWebImage 会在每次 APP 结束的时候执行清理任务。 清理缓存的规则分两步进行。 第一步先清除掉过期的缓存文件。如果清除掉过期的缓存之后，空间还不够。那么就继续按文件时间从早到晚排序，先清除最早的缓存文件，直到剩余空间达到要求。
+
+### 它是如何解决tableView的复用时出现图片错乱问题的呢？
+- 每次都会调UIImageView+WebCache文件中的 [self sd_cancelCurrentImageLoad];
+
+### 描述下SDWebImage里面给UIImageView加载图片的逻辑
+- SDWebImage 中为 UIImageView 提供了一个分类UIImageView+WebCache.h, 这个分类中有一个最常用的接口sd_setImageWithURL:placeholderImage:，会在真实图片出现前会先显示占位图片，当真实图片被加载出来后再替换占位图片。
+- 加载图片的过程大致如下：
+    * 首先会在 SDWebImageCache 中寻找图片是否有对应的缓存, 它会以url 作为数据的索引先在内存中寻找是否有对应的缓存
+    * 如果缓存未找到就会利用通过MD5处理过的key来继续在磁盘中查询对应的数据,如果找到了,就会把磁盘中的数据加载到内存中，并将图片显示出来
+    * 如果在内存和磁盘缓存中都没有找到，就会向远程服务器发送请求，开始下载图片
+    * 下载后的图片会加入缓存中，并写入磁盘中
+    * 整个获取图片的过程都是在子线程中执行，获取到图片后回到主线程将图片显示出来
+- SDWebImage原理，调用类别的方法：
+    * 从内存（字典）中找图片（当这个图片在本次使用程序的过程中已经被加载过），找到直接使用。
+    * 从沙盒中找（当这个图片在之前使用程序的过程中被加载过），找到使用，缓存到内存中。
+    * 从网络上获取，使用，缓存到内存，缓存到沙盒。
+
+### MJRefresh如何实现下拉刷新
+- 利用contentOffset首先如何实现下拉刷新，很显然下拉的时候scrollView 的contentOffset会改变，我们可以监听这个值的变化来给scrollView添加一个mj_header并实现相应的动画效果。
+- 如何添加mj_header现在目标是给scrollView添加一个MJRefreshHeader，只要给scrollView添加MJRefreshHeader，其他tableView和collectionView就都有了，但是系统的scrollView没有这个属性，这时候我们可以通过给scrollView的分类添加关联对象的方式，来实现给scrollView添加一个属性，具体可参考UIScrollView+MJRefresh代码。
+- mj_header添加在contentInset.top的位置。
+- 为什么要有MJRefreshComponent接下来我们就想如何去写一个MJRefreshHeader，显然，我们不但有下拉刷新还有上拉刷新，这时候我们就需要一个baseView，这个baseView就是MJRefreshComponent，我们的上拉和下拉刷新控件都继承于这个MJRefreshComponent，MJRefreshComponent继承于UIView是最基础的基类，所以关于上拉下拉所有唯一共用的东西我们都可以写在这里面。
+
+
+### 关于hook
+
+- 通过hook可以让别人的程序执行自己所写的代码。
+- iOS中HOOK技术的几种方式：
+    * Method Swizzle利用OC的Runtime特性，动态改变SEL（方法编号）和IMP（方法实现）的对应关系，达到OC方法调用流程改变的目的。主要用于OC方法。
+    * fishhook它是Facebook提供的一个动态修改链接mach-O文件的工具。利用MachO文件加载原理，通过修改懒加载和非懒加载两个表的指针达到C函数HOOK的目的。
+
+- fishhook
+    * 重新绑定符号达到HOOK的目的
+    * 外部符号，会在懒加载和非懒加载表中保存函数地址
+    * fishhook就是找到这两张表，并且修改里面的地址做到HOOK!
+
+### fishhook
+- fishhook是Facebook提供的一个动态修改链接mach-O文件的工具。利用MachO文件加载原理，通过修改懒加载和非懒加载两个表的指针达到C函数HOOK的目的。
+- Mach-O文件是被谁加载的？
+    * 我们知道，在程序启动的时候 Mach-O 文件会被 DYLD （动态加载器）加载进内存。加载完 Mach-O 后，DYLD接着会去加载 Mach-O 所依赖的动态库。
+- 何为ASLR技术？
+    * 地址空间布局随机化。它会让 Mach-O 文件加载的时候是随机地址。有了这个技术，Mach-O 文件每次加载进内存的时候地址都是不一样的。主要是为了防止逆向技术。
+- 系统的动态库在内存里面的地址是不固定的，每次启动程序的时候地址都是随机的。苹果为了能在 Mach-O 文件中访问外部函数，采用了一个技术，叫做PIC（位置代码独立）技术。当你的应用程序想要调用 Mach-O 文件外部的函数的时候，或者说如果 Mach-O 内部需要调用系统的库函数时，Mach-O 文件会：
+    * 先在 Mach-O 文件的 _DATA 段中建立一个指针（8字节的数据，放的全是0），这个指针变量指向外部函数。
+    * DYLD 会动态的进行绑定！将 Mach-O 中的 _DATA 段中的指针，指向外部函数。
+    * 所以说，C的底层也有动态的表现。C在内部函数的时候是静态的，在编译后，函数的内存地址就确定了。但是，外部的函数是不能确定的，也就是说C的底层也有动态的。fishhook 之所以能 hook C函数，是利用了 Mach-O 文件的 PIC 技术特点。也就造就了静态语言C也有动态的部分，通过 DYLD 进行动态绑定的时候做了手脚。
+    * 我们经常说符号，其实_DATA段中建立的指针就是符号。fishhook的原理其实就是，将指向系统方法（外部函数）的符号重新进行绑定指向内部的函数。这样就把系统方法与自己定义的方法进行了交换。这也就是为什么C的内部函数修改不了，自定义的函数修改不了，只能修改 Mach-O 外部的函数。
+    * 注：
+        * 对于非懒加载符号表，DYLD会立刻马上去链接动态库
+        * 对于懒加载符号表，DYLD会在执行代码的时候去动态的链接动态库
+
+### fishhook 是如何通过字符串来找到我们的函数的呢？
+- 我们可以想到的是，Mach-O 文件里面肯定有一个与字符串相关的东西。
+- 首先，我们从懒加载符号表（Lazy Symbol Pointers）开始入手。懒加载符号表里面第一个符号是 NSLog 的指针。这个懒加载符号表有一个与之一一对应的符号表（Indirect Symbols）。
+- 这个符号表是对应着字条串的。
+- 这个时候有一个偏移，就是在字符串表（String Table）里面的一个index。也就是说这个 NSLog 在 String Table 里面的偏移地址。
+- 看String Table是从哪开始的，所以开始地址加偏移地址就等于真实的地方，就是字符串 NSLog 的位置。
+
